Archive2/6e/9f16a3f4b5d309/output
main.cpp: In lambda function:
main.cpp:19:33: error: 'lk' is not captured
     cv.wait(lk, []{std::cout << lk.owns_lock() << ready << std::endl; return ready;});
                                 ^
